# fav

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  pyproject.toml  run.py
.github/workflows/: docker-build.yml  yt-dlp-update.yml
script/: tx.js
src/core/: __init__.py  config.py  logger.py
src/tool/: __init__.py  cloudflare.py  cookiecloud.py  filename.py
src/web/: __init__.py  bilibili.py  tangxin.py  telegram.py
